--- a/docs/ADR/ADR-002.md
+++ b/docs/ADR/ADR-002.md
@@ -34,12 +34,16 @@ Currently:
 
    ```text
    confd/
-   ├── conf.d/                   # `confd` configuration
-   │   ├── Dockerfile-java.toml
-   │   └── Dockerfile-node.toml
-   └── templates/                # Dockerfile templates
-       ├── Dockerfile-java.tmpl    # For Java services
-       └── Dockerfile-node.tmpl    # For Node.JS (Angular)
+   ├── java/
+   │   ├── conf.d/
+   │   │   ├── Dockerfile.toml
+   │   └── templates/
+   │       └── Dockerfile.tmpl
+   └── node/
+       ├── conf.d/
+       │   └── Dockerfile.toml
+       └── templates/
+           └── Dockerfile.tmpl
    ```
 
 2. **Integration with CI/CD**:
@@ -51,7 +55,6 @@ Currently:
        engine_type:     # java or node
        engine_version:  # engine version
        app_name:        # application name
-       app_version:     # application version
      ```
 
 3. **Standardization of Dockerfile**:
